--- a/myLittleMunsta/Base.lproj/Main.storyboard
+++ b/myLittleMunsta/Base.lproj/Main.storyboard
@@ -1,25 +1,132 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="6211" systemVersion="14A298i" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="BYZ-38-t0r">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="10116" systemVersion="15E65" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="BYZ-38-t0r">
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="6204"/>
+        <deployment identifier="iOS"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="10085"/>
     </dependencies>
     <scenes>
         <!--View Controller-->
         <scene sceneID="tne-QT-ifu">
             <objects>
-                <viewController id="BYZ-38-t0r" customClass="ViewController" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController id="BYZ-38-t0r" customClass="ViewController" customModule="myLittleMunsta" customModuleProvider="target" sceneMemberID="viewController">
                     <layoutGuides>
                         <viewControllerLayoutGuide type="top" id="y3c-jy-aDJ"/>
                         <viewControllerLayoutGuide type="bottom" id="wfy-db-euE"/>
                     </layoutGuides>
-                    <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
+                    <view key="view" contentMode="scaleAspectFill" id="8bC-Xf-vdC">
                         <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="bg" translatesAutoresizingMaskIntoConstraints="NO" id="4Uo-9P-DOs">
+                                <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
+                            </imageView>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="ground" translatesAutoresizingMaskIntoConstraints="NO" id="10p-6t-vRj">
+                                <rect key="frame" x="0.0" y="540" width="600" height="60"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="60" id="cIG-pX-wt0"/>
+                                </constraints>
+                            </imageView>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="livespanel" translatesAutoresizingMaskIntoConstraints="NO" id="a81-rj-RCn">
+                                <rect key="frame" x="180" y="28" width="240" height="79"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="240" id="9fS-CF-B88"/>
+                                    <constraint firstAttribute="height" constant="79" id="j8h-SC-Q0F"/>
+                                </constraints>
+                            </imageView>
+                            <stackView opaque="NO" contentMode="scaleToFill" distribution="fillEqually" spacing="100" translatesAutoresizingMaskIntoConstraints="NO" id="xEO-r0-Sw9">
+                                <rect key="frame" x="155" y="122" width="290" height="98"/>
+                                <subviews>
+                                    <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="heart" translatesAutoresizingMaskIntoConstraints="NO" id="vPb-I2-eOw">
+                                        <rect key="frame" x="0.0" y="0.0" width="95" height="98"/>
+                                    </imageView>
+                                    <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="food" translatesAutoresizingMaskIntoConstraints="NO" id="EGP-3s-ho0">
+                                        <rect key="frame" x="195" y="0.0" width="95" height="98"/>
+                                    </imageView>
+                                </subviews>
+                            </stackView>
+                            <stackView opaque="NO" contentMode="scaleToFill" misplaced="YES" distribution="fillEqually" spacing="16" translatesAutoresizingMaskIntoConstraints="NO" id="3Ak-Fb-iWv">
+                                <rect key="frame" x="206" y="44" width="182" height="50"/>
+                                <subviews>
+                                    <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="skull" translatesAutoresizingMaskIntoConstraints="NO" id="ERx-1a-ded">
+                                        <rect key="frame" x="0.0" y="0.0" width="50" height="50"/>
+                                        <constraints>
+                                            <constraint firstAttribute="height" constant="50" id="rNx-Kt-3vd"/>
+                                            <constraint firstAttribute="width" constant="50" id="zuZ-rK-spZ"/>
+                                        </constraints>
+                                    </imageView>
+                                    <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="skull" translatesAutoresizingMaskIntoConstraints="NO" id="aDF-6M-UkQ">
+                                        <rect key="frame" x="66" y="0.0" width="50" height="50"/>
+                                        <constraints>
+                                            <constraint firstAttribute="height" constant="50" id="fyf-Gd-cLB"/>
+                                            <constraint firstAttribute="width" constant="50" id="ux3-6r-y0d"/>
+                                        </constraints>
+                                    </imageView>
+                                    <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="skull" translatesAutoresizingMaskIntoConstraints="NO" id="5Rw-YC-W39">
+                                        <rect key="frame" x="132" y="0.0" width="50" height="50"/>
+                                        <constraints>
+                                            <constraint firstAttribute="height" constant="50" id="Unx-AE-OJ9"/>
+                                            <constraint firstAttribute="width" constant="50" id="ZwG-IF-xDq"/>
+                                        </constraints>
+                                    </imageView>
+                                </subviews>
+                            </stackView>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="idle1" translatesAutoresizingMaskIntoConstraints="NO" id="Ku1-u8-YOm">
+                                <rect key="frame" x="-24" y="153" width="491" height="465"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="465" id="Gd1-xy-atz"/>
+                                    <constraint firstAttribute="width" constant="491" id="HXi-5j-ZdU"/>
+                                    <constraint firstAttribute="height" constant="465" id="WBN-JS-MpQ"/>
+                                    <constraint firstAttribute="width" constant="491" id="buv-5A-C2S"/>
+                                    <constraint firstAttribute="width" constant="491" id="gGp-2w-Ilf"/>
+                                    <constraint firstAttribute="height" constant="465" id="lCM-Wt-SZn"/>
+                                    <constraint firstAttribute="width" constant="491" id="sbp-Kk-f2N"/>
+                                    <constraint firstAttribute="height" constant="465" id="uGk-jP-NB3"/>
+                                </constraints>
+                                <variation key="default">
+                                    <mask key="constraints">
+                                        <exclude reference="WBN-JS-MpQ"/>
+                                        <exclude reference="buv-5A-C2S"/>
+                                        <exclude reference="gGp-2w-Ilf"/>
+                                        <exclude reference="lCM-Wt-SZn"/>
+                                        <exclude reference="sbp-Kk-f2N"/>
+                                        <exclude reference="uGk-jP-NB3"/>
+                                    </mask>
+                                </variation>
+                            </imageView>
+                        </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstItem="a81-rj-RCn" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="1He-Cl-RBq"/>
+                            <constraint firstAttribute="bottom" secondItem="Ku1-u8-YOm" secondAttribute="bottom" constant="-18" id="3XW-qL-9ip"/>
+                            <constraint firstItem="3Ak-Fb-iWv" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="ChA-aV-qX2"/>
+                            <constraint firstAttribute="trailing" secondItem="4Uo-9P-DOs" secondAttribute="trailing" id="Esi-HX-wNp"/>
+                            <constraint firstItem="Ku1-u8-YOm" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leading" constant="-24" id="KSd-jM-AjH"/>
+                            <constraint firstAttribute="trailing" secondItem="10p-6t-vRj" secondAttribute="trailing" id="RpE-02-Ips"/>
+                            <constraint firstItem="4Uo-9P-DOs" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leading" id="Sch-vJ-qwA"/>
+                            <constraint firstItem="wfy-db-euE" firstAttribute="top" secondItem="10p-6t-vRj" secondAttribute="bottom" id="U2x-94-egg"/>
+                            <constraint firstItem="10p-6t-vRj" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leading" id="hCk-24-sUl"/>
+                            <constraint firstItem="3Ak-Fb-iWv" firstAttribute="centerY" secondItem="a81-rj-RCn" secondAttribute="centerY" id="hh5-0V-ewj"/>
+                            <constraint firstItem="xEO-r0-Sw9" firstAttribute="top" secondItem="a81-rj-RCn" secondAttribute="bottom" constant="15" id="iHZ-IR-DNs"/>
+                            <constraint firstItem="wfy-db-euE" firstAttribute="top" secondItem="4Uo-9P-DOs" secondAttribute="bottom" id="ke6-ea-14i"/>
+                            <constraint firstItem="a81-rj-RCn" firstAttribute="top" secondItem="y3c-jy-aDJ" secondAttribute="bottom" constant="8" id="mnl-oi-73f"/>
+                            <constraint firstItem="4Uo-9P-DOs" firstAttribute="top" secondItem="8bC-Xf-vdC" secondAttribute="top" id="qCt-JI-hze"/>
+                            <constraint firstItem="xEO-r0-Sw9" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="vUD-pc-TEg"/>
+                            <constraint firstItem="3Ak-Fb-iWv" firstAttribute="centerX" secondItem="a81-rj-RCn" secondAttribute="centerX" id="wgN-ZV-2IL"/>
+                        </constraints>
                     </view>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
+            <point key="canvasLocation" x="305" y="387"/>
         </scene>
     </scenes>
+    <resources>
+        <image name="bg" width="768" height="1024"/>
+        <image name="food" width="95" height="98"/>
+        <image name="ground" width="1444" height="151"/>
+        <image name="heart" width="95" height="98"/>
+        <image name="idle1" width="889" height="615"/>
+        <image name="livespanel" width="468" height="137"/>
+        <image name="skull" width="95" height="98"/>
+    </resources>
 </document>
